kube-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: demo
  name: demo-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo
        version: v1
    spec:
      containers:
        - image: localhost:5000/mini-lending:v1 #changes the image as you prefer
          name: mini-lending
          imagePullPolicy: IfNotPresent
          resources: {}
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: demo
  name: demo-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
      version: v2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo
        version: v2
    spec:
      containers:
        - image: localhost:5000/mini-lending:v2 #changes the image as you prefer
          name: mini-lending
          imagePullPolicy: IfNotPresent
          resources: {}
          ports:
          - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
status: {}
