kube-services.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: demo
  name: demo-mini-lending
spec:
  ports:
    - name: http-8080
      port: 8080
  selector:
    app: demo
  type: NodePort
status:
  loadBalancer: {}
