istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-mini-lending
spec:
  host: demo-mini-lending
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-mini-lending
spec:
  hosts:
#    - mini.lending
    - "*"
  gateways:
  - istio-system/ingressgateway
  http:
    - route:
        - destination:
            host: demo-mini-lending
            port:
              number: 8080
            subset: v1
      match:
        - headers:
            x-api-version:
              exact: v1.0.0
    - route:
        - destination:
            host: demo-mini-lending
            port:
              number: 8080
            subset: v2
      match:
        - headers:
            x-api-version:
              exact: v2.0.0
